# hermes

./: README.md  hermes.cabal
app/: Main.hs
src/: Asset.hs  Binance.hs  Trade.hs  Trend.hs
