cabal-version:      2.4
name:               hermes
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable hermes
    default-language: Haskell2010
    main-is:          Main.hs
    hs-source-dirs:   app
                    , src
    other-modules:    Asset
                    , Binance
                    , Trade
                    , Trend
    build-depends:    base ^>=4.14.2.0
                    , req
                    , aeson